<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/landmrk_type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landmark_title" />

        <Spinner
            android:id="@+id/landmark_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bldg_num_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bldg_title" />

        <EditText
            android:id="@+id/buildingNumInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/flr_num_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flr_title" />

        <EditText
            android:id="@+id/floorNumInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/rm_num_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rm_title" />

        <EditText
            android:id="@+id/roomNumInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/descr_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descr_title" />

        <EditText
            android:id="@+id/descr_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="16"
            android:inputType="textPersonName"
            android:text="@string/descr_text" />
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="16dp"
        android:onClick="onCreateRoomTap"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
